--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href='https://fonts.googleapis.com/css?family=Dynalight' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Dynalight" rel="stylesheet"/>
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +9,6 @@
   </head>
 
   <body>
-    
     <div class="container">
       <div class="header">
         <div id="aAC">
@@ -26,9 +25,5 @@
         </ul>
       </div>
     </div>
-  
   </body>
-
-  </html>
-
-
+</html>
