corrected positioning of nav bar and header

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
           <li>Placeholder</li>
         </ul>
       </div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ullamcorper convallis facilisis. Aliquam erat volutpat. Proin sagittis arcu ut justo posuere semper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur feugiat magna quis leo tempus, et interdum erat accumsan. Fusce tempor suscipit purus, a venenatis velit luctus non. Vivamus vel dignissim augue. Donec mattis magna diam, id facilisis erat viverra ac. Aliquam laoreet feugiat consectetur. Cras sapien tortor, consequat vel commodo a, pellentesque finibus nisl. Donec vel commodo nibh. Proin tempor sagittis ultricies. Sed mollis viverra purus vel lacinia. Proin et lectus id eros ornare faucibus. Aenean tempor nisl vel auctor tempus. Suspendisse potenti.
+      </p>
     </div>
     <br>
     <br>
