corrected header scaling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="header">
         <div id="aAC">
-          <span>All About Cooper</span>
+          <p>All About Cooper<p>
         </div>
       </div>
       <div class="topnav">
