--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,7 +15,8 @@
     <div class="container">
       <div class="header">
         <div id="aAC">
-          <p>All About Cooper<p>
+          <p>All About Cooper</p>
+          <p></p>
         </div>
       </div>
       <div class="topnav">
@@ -24,58 +28,69 @@
           <li>Placeholder</li>
         </ul>
       </div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ullamcorper convallis facilisis. Aliquam erat volutpat. Proin sagittis arcu ut justo posuere semper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur feugiat magna quis leo tempus, et interdum erat accumsan. Fusce tempor suscipit purus, a venenatis velit luctus non. Vivamus vel dignissim augue. Donec mattis magna diam, id facilisis erat viverra ac. Aliquam laoreet feugiat consectetur. Cras sapien tortor, consequat vel commodo a, pellentesque finibus nisl. Donec vel commodo nibh. Proin tempor sagittis ultricies. Sed mollis viverra purus vel lacinia. Proin et lectus id eros ornare faucibus. Aenean tempor nisl vel auctor tempus. Suspendisse potenti.
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
+        ullamcorper convallis facilisis. Aliquam erat volutpat. Proin sagittis
+        arcu ut justo posuere semper. Vestibulum ante ipsum primis in faucibus
+        orci luctus et ultrices posuere cubilia curae; Curabitur feugiat magna
+        quis leo tempus, et interdum erat accumsan. Fusce tempor suscipit purus,
+        a venenatis velit luctus non. Vivamus vel dignissim augue. Donec mattis
+        magna diam, id facilisis erat viverra ac. Aliquam laoreet feugiat
+        consectetur. Cras sapien tortor, consequat vel commodo a, pellentesque
+        finibus nisl. Donec vel commodo nibh. Proin tempor sagittis ultricies.
+        Sed mollis viverra purus vel lacinia. Proin et lectus id eros ornare
+        faucibus. Aenean tempor nisl vel auctor tempus. Suspendisse potenti.
       </p>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
   </body>
 </html>
