--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>All About Cooper</title>
+    <!-- hello world -->
   </head>
 
   <body>
